Changelog
=========

1.0dev (unreleased)
-------------------

- Initial release

- Added publication view
  [pilz]